added canvas and stylesheet

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 	<head>
 		<meta charset='utf-8' />
 		<title>Kilo9</title>
+		<link rel='stylesheet' type='text/css' href="./style.css">
 	</head>
 
 	<body>
-		<h1>Hello World</h1>
-		<p>Welcome to the glorious website of Kilo9</p>
+		<header>
+			<h1>Hello World</h1>
+			<p>Welcome to the glorious website of Kilo9</p>
+		</header>
+
+		<section>
+			<canvas id='screen'></canvas>	
+		</section>
 	</body>
 
 </html
