--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset='utf-8' />
 		<title>Kilo9</title>
 		<link rel='stylesheet' type='text/css' href="./style.css">
+		<script src='./script.js' defer></script>
 	</head>
 
 	<body>
@@ -14,8 +15,12 @@
 		</header>
 
 		<section>
-			<canvas id='screen'></canvas>	
+			<canvas id='screen' width='600' height='400'></canvas>	
 		</section>
+
+		<footer>
+			<p>Jeremy Micah Bassi</p>
+		</footer>
 	</body>
 
 </html
