add side nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 			<p>Welcome to the glorious website of Kilo9</p>
 		</header>
 
-		<section>
+        <section id='side'>
+            <h1 id='logo'>Kilo9</h1>
+
+            <nav id='links'>
+                <ul>
+                    <li><a href='https://Kilo9.github.io'>Home</a></li>
+                    <li><a href='https://github.com/Kilo9'>Github</a></li>
+                    <li><a href='https://www.stevens.edu/sit'>School</a></li>
+                </ul>
+            </nav>
+        </section>
+
+		<section id='canvas'>
 			<canvas id='screen' width='600' height='400'></canvas>	
 		</section>
 
