start new version of site

--- a/index.html
+++ b/index.html
@@ -5,34 +5,16 @@
 		<meta charset='utf-8' />
 		<title>Kilo9</title>
 		<link rel='stylesheet' type='text/css' href="./style.css">
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js' defer></script>
 		<script src='./script.js' defer></script>
 	</head>
 
 	<body>
-		<header>
-			<h1>Hello World</h1>
-			<p>Welcome to the glorious website of Kilo9</p>
-		</header>
 
-        <section id='side'>
-            <h1 id='logo'>Kilo9</h1>
+    <div id='back'></div>
 
-            <nav id='links'>
-                <ul>
-                    <li><a href='https://Kilo9.github.io'>Home</a></li>
-                    <li><a href='https://github.com/Kilo9'>Github</a></li>
-                    <li><a href='https://www.stevens.edu/sit'>School</a></li>
-                </ul>
-            </nav>
-        </section>
+    <p id='front'>Kilo9</p>
 
-		<section id='canvas'>
-			<canvas id='screen' width='600' height='400'></canvas>	
-		</section>
-
-		<footer>
-			<p>Jeremy Micah Bassi</p>
-		</footer>
 	</body>
 
 </html
