add sway with the sliding

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 
 	<body>
 
-    <div id='back'></div>
+    <div id='container'>
+      <div id='back'>
+        <nav>
+          <ul>
+            <li>github</li> 
+            <li>bitbucket</li>
+          </ul>
+        </nav>
+      </div>
+      <p id='front'>Kilo9</p>
+    </div>
 
-    <p id='front'>Kilo9</p>
+
 
 	</body>
 
