move old stuff into 0 directory

--- a/0/index.html
+++ b/0/index.html
@@ -9,8 +9,11 @@
 		<script src='./script.js' defer></script>
 	</head>
 
-	<body>
+  <header>
+  
+  </header>
 
+	<body>
     <div id='container'>
       <div id='back'>
         <nav>
@@ -22,10 +25,11 @@
       </div>
       <p id='front'>Kilo9</p>
     </div>
-
-
-
 	</body>
+
+  <footer>
+  
+  </footer>
 
 </html
 	
